Fixes #17 by moving Time-based rollup tests to the extra-tests folder since not every org has access to those objects. Will re-visit to fix this up, if possible

--- a/rollup/main/default/classes/RollupTests.cls
+++ b/rollup/main/default/classes/RollupTests.cls
@@ -1,5 +1,5 @@
 @isTest
-private class RollupTests {
+public class RollupTests {
   // NB - tests that perform DML should wrap the DML by setting Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
   // and then Rollup.defaultRollupLimit = null after DML has been performed. This is to prevent side-effects caused by having implemented Rollup in your org
   @TestSetup
@@ -1389,7 +1389,7 @@ private class RollupTests {
     System.assertEquals(testOppOne.Amount, updatedAcc.AnnualRevenue, 'AVERAGE BEFORE_DELETE should take into account only non-deleted values');
   }
 
-  // Now we test different field types for success: time, datetime, date. Here be dragons.
+  // Now we test different field types for success: datetime, date. Here be dragons.
   @isTest
   static void shouldMaxDateOnInsert() {
     Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
@@ -1620,238 +1620,6 @@ private class RollupTests {
     System.assertEquals(1, mock.Records.size(), 'Records should have been populated MIN DATETIME BEFORE_DELETE');
     Contract updatedContract = (Contract) mock.Records[0];
     System.assertEquals(eventTwo.ActivityDateTime, updatedContract.ActivatedDate);
-  }
-
-  /**
-   * Time tests. Pretty slim pickings for standard objects with Time fields, but hopefully this helps
-   * to highlight that you don't need your unique value to be in a lookup field; as long as it matches
-   * a value on a related record, you're good to go!
-   */
-
-  @isTest
-  static void shouldMinTimeOnInsert() {
-    Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
-    ContactPointEmail cpe = new ContactPointEmail(EmailDomain = 'Lookupfield', EmailAddress = 'testrollup' + System.now().getTime() + '@email.com');
-    insert cpe;
-    Rollup.defaultRollupLimit = null;
-
-    ContactPointAddress cp1 = new ContactPointAddress(BestTimeToContactEndTime = Time.newInstance(11, 11, 11, 11), Name = cpe.EmailDomain);
-    ContactPointAddress cp2 = new ContactPointAddress(BestTimeToContactEndTime = Time.newInstance(12, 12, 12, 12), Name = cpe.EmailDomain);
-
-    DMLMock mock = loadMock(new List<ContactPointAddress>{ cp1, cp2 });
-    Rollup.apexContext = TriggerOperation.AFTER_INSERT;
-
-    Test.startTest();
-    Rollup.minFromApex(
-        ContactPointAddress.BestTimeToContactEndTime,
-        ContactPointAddress.Name,
-        ContactPointEmail.EmailDomain,
-        ContactPointEmail.BestTimeToContactEndTime,
-        ContactPointEmail.SObjectType
-      )
-      .runCalc();
-    Test.stopTest();
-
-    System.assertEquals(1, mock.Records.size(), 'Records should have been populated MIN TIME AFTER_INSERT');
-    cpe = (ContactPointEmail) mock.Records[0];
-    System.assertEquals(cp1.BestTimeToContactEndTime, cpe.BestTimeToContactEndTime);
-  }
-
-  @isTest
-  static void shouldMaxTimeOnInsert() {
-    Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
-    ContactPointEmail cpe = new ContactPointEmail(EmailDomain = 'Lookupfield', EmailAddress = 'testrollup' + System.now().getTime() + '@email.com');
-    insert cpe;
-    Rollup.defaultRollupLimit = null;
-
-    ContactPointAddress cp1 = new ContactPointAddress(BestTimeToContactEndTime = Time.newInstance(11, 11, 11, 11), Name = cpe.EmailDomain);
-    ContactPointAddress cp2 = new ContactPointAddress(BestTimeToContactEndTime = Time.newInstance(12, 12, 12, 12), Name = cpe.EmailDomain);
-
-    DMLMock mock = loadMock(new List<ContactPointAddress>{ cp1, cp2 });
-    Rollup.apexContext = TriggerOperation.AFTER_INSERT;
-
-    Test.startTest();
-    Rollup.maxFromApex(
-        ContactPointAddress.BestTimeToContactEndTime,
-        ContactPointAddress.Name,
-        ContactPointEmail.EmailDomain,
-        ContactPointEmail.BestTimeToContactEndTime,
-        ContactPointEmail.SObjectType
-      )
-      .runCalc();
-    Test.stopTest();
-
-    System.assertEquals(1, mock.Records.size(), 'Records should have been populated MAX TIME AFTER_INSERT');
-    cpe = (ContactPointEmail) mock.Records[0];
-    System.assertEquals(cp2.BestTimeToContactEndTime, cpe.BestTimeToContactEndTime);
-  }
-
-  @isTest
-  static void shouldMaxTimeOnUpdate() {
-    Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
-    ContactPointEmail cpe = new ContactPointEmail(
-      BestTimeToContactEndTime = Time.newInstance(0, 0, 0, 0),
-      EmailDomain = 'Lookupfield',
-      EmailAddress = 'testrollup' + System.now().getTime() + '@email.com'
-    );
-    insert cpe;
-    Rollup.defaultRollupLimit = null;
-
-    ContactPointAddress cp1 = new ContactPointAddress(
-      BestTimeToContactEndTime = Time.newInstance(5, 5, 5, 5),
-      Name = cpe.EmailDomain,
-      Id = generateId(ContactPointAddress.SObjectType)
-    );
-    ContactPointAddress cp2 = new ContactPointAddress(
-      BestTimeToContactEndTime = Time.newInstance(6, 6, 6, 6),
-      Name = cpe.EmailDomain,
-      Id = generateId(ContactPointAddress.SObjectType)
-    );
-
-    DMLMock mock = loadMock(new List<ContactPointAddress>{ cp1, cp2 });
-
-    Rollup.oldRecordsMap = new Map<Id, SObject>{ cp1.Id => new ContactPointAddress(BestTimeToContactEndTime = Time.newInstance(12, 12, 12, 12), Id = cp1.Id) };
-    Rollup.apexContext = TriggerOperation.AFTER_UPDATE;
-
-    Test.startTest();
-    Rollup.maxFromApex(
-        ContactPointAddress.BestTimeToContactEndTime,
-        ContactPointAddress.Name,
-        ContactPointEmail.EmailDomain,
-        ContactPointEmail.BestTimeToContactEndTime,
-        ContactPointEmail.SObjectType
-      )
-      .runCalc();
-    Test.stopTest();
-
-    System.assertEquals(1, mock.Records.size(), 'Records should have been populated MAX TIME AFTER_UPDATE');
-    cpe = (ContactPointEmail) mock.Records[0];
-    System.assertEquals(cp2.BestTimeToContactEndTime, cpe.BestTimeToContactEndTime);
-  }
-
-  @isTest
-  static void shouldMinTimeOnUpdate() {
-    Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
-    ContactPointEmail cpe = new ContactPointEmail(
-      BestTimeToContactEndTime = Time.newInstance(0, 0, 0, 0),
-      EmailDomain = 'Lookupfield',
-      EmailAddress = 'testrollup' + System.now().getTime() + '@email.com'
-    );
-    insert cpe;
-    Rollup.defaultRollupLimit = null;
-
-    ContactPointAddress cp1 = new ContactPointAddress(
-      BestTimeToContactEndTime = Time.newInstance(5, 5, 5, 5),
-      Name = cpe.EmailDomain,
-      Id = generateId(ContactPointAddress.SObjectType)
-    );
-    ContactPointAddress cp2 = new ContactPointAddress(
-      BestTimeToContactEndTime = Time.newInstance(6, 6, 6, 6),
-      Name = cpe.EmailDomain,
-      Id = generateId(ContactPointAddress.SObjectType)
-    );
-
-    DMLMock mock = loadMock(new List<ContactPointAddress>{ cp1, cp2 });
-
-    Rollup.oldRecordsMap = new Map<Id, SObject>{ cp1.Id => new ContactPointAddress(BestTimeToContactEndTime = Time.newInstance(12, 12, 12, 12), Id = cp1.Id) };
-    Rollup.apexContext = TriggerOperation.AFTER_UPDATE;
-
-    Test.startTest();
-    Rollup.minFromApex(
-        ContactPointAddress.BestTimeToContactEndTime,
-        ContactPointAddress.Name,
-        ContactPointEmail.EmailDomain,
-        ContactPointEmail.BestTimeToContactEndTime,
-        ContactPointEmail.SObjectType
-      )
-      .runCalc();
-    Test.stopTest();
-
-    System.assertEquals(1, mock.Records.size(), 'Records should have been populated MIN TIME AFTER_UPDATE');
-    cpe = (ContactPointEmail) mock.Records[0];
-    System.assertEquals(cp1.BestTimeToContactEndTime, cpe.BestTimeToContactEndTime);
-  }
-
-  @isTest
-  static void shouldMinTimeOnDelete() {
-    Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
-    ContactPointEmail cpe = new ContactPointEmail(
-      BestTimeToContactEndTime = Time.newInstance(5, 5, 5, 5),
-      EmailDomain = 'Lookupfield',
-      EmailAddress = 'testrollup' + System.now().getTime() + '@email.com'
-    );
-    insert cpe;
-
-    ContactPointAddress cp1 = new ContactPointAddress(
-      BestTimeToContactEndTime = Time.newInstance(5, 5, 5, 5),
-      Name = cpe.EmailDomain,
-      Id = generateId(ContactPointAddress.SObjectType)
-    );
-    ContactPointAddress cp2 = new ContactPointAddress(BestTimeToContactEndTime = Time.newInstance(6, 6, 6, 6), Name = cpe.EmailDomain);
-    insert cp2;
-    Rollup.defaultRollupLimit = null;
-
-    List<ContactPointAddress> addresses = new List<ContactPointAddress>{ cp1 };
-    DMLMock mock = loadMock(new List<ContactPointAddress>{ cp1 });
-
-    Rollup.oldRecordsMap = new Map<Id, SObject>(addresses);
-    Rollup.apexContext = TriggerOperation.BEFORE_DELETE;
-
-    Test.startTest();
-    Rollup.minFromApex(
-        ContactPointAddress.BestTimeToContactEndTime,
-        ContactPointAddress.Name,
-        ContactPointEmail.EmailDomain,
-        ContactPointEmail.BestTimeToContactEndTime,
-        ContactPointEmail.SObjectType
-      )
-      .runCalc();
-    Test.stopTest();
-
-    System.assertEquals(1, mock.Records.size(), 'Records should have been populated MIN TIME BEFORE_DELETE');
-    cpe = (ContactPointEmail) mock.Records[0];
-    System.assertEquals(cp2.BestTimeToContactEndTime, cpe.BestTimeToContactEndTime);
-  }
-
-  @isTest
-  static void shouldMaxTimeOnDelete() {
-    Rollup.defaultRollupLimit = new RollupLimit__mdt(ShouldAbortRun__c = true);
-    ContactPointEmail cpe = new ContactPointEmail(
-      BestTimeToContactEndTime = Time.newInstance(5, 5, 5, 5),
-      EmailDomain = 'Lookupfield',
-      EmailAddress = 'testrollup' + System.now().getTime() + '@email.com'
-    );
-    insert cpe;
-
-    ContactPointAddress cp1 = new ContactPointAddress(
-      BestTimeToContactEndTime = Time.newInstance(5, 5, 5, 5),
-      Name = cpe.EmailDomain,
-      Id = generateId(ContactPointAddress.SObjectType)
-    );
-    ContactPointAddress cp2 = new ContactPointAddress(BestTimeToContactEndTime = Time.newInstance(4, 4, 4, 4), Name = cpe.EmailDomain);
-    insert cp2;
-    Rollup.defaultRollupLimit = null;
-
-    List<ContactPointAddress> addresses = new List<ContactPointAddress>{ cp1 };
-    DMLMock mock = loadMock(new List<ContactPointAddress>{ cp1 });
-
-    Rollup.oldRecordsMap = new Map<Id, SObject>(addresses);
-    Rollup.apexContext = TriggerOperation.BEFORE_DELETE;
-
-    Test.startTest();
-    Rollup.maxFromApex(
-        ContactPointAddress.BestTimeToContactEndTime,
-        ContactPointAddress.Name,
-        ContactPointEmail.EmailDomain,
-        ContactPointEmail.BestTimeToContactEndTime,
-        ContactPointEmail.SObjectType
-      )
-      .runCalc();
-    Test.stopTest();
-
-    System.assertEquals(1, mock.Records.size(), 'Records should have been populated MIN TIME BEFORE_DELETE');
-    cpe = (ContactPointEmail) mock.Records[0];
-    System.assertEquals(cp2.BestTimeToContactEndTime, cpe.BestTimeToContactEndTime);
   }
 
   @isTest
@@ -2506,7 +2274,7 @@ private class RollupTests {
     return loadMock(records);
   }
 
-  private static DMLMock loadMock(List<SObject> records) {
+  public static DMLMock loadMock(List<SObject> records) {
     Rollup.records = records;
     Rollup.shouldRun = true;
     DMLMock mock = new DMLMock();
@@ -2533,7 +2301,7 @@ private class RollupTests {
 
   // from https://salesforce.stackexchange.com/questions/21137/creating-unit-tests-without-interacting-with-the-database-creating-fake-ids
   private static Integer startingNumber = 1;
-  private static String generateId(Schema.SObjectType sObjectType) {
+  public static String generateId(Schema.SObjectType sObjectType) {
     String result = String.valueOf(startingNumber++);
     return sObjectType.getDescribe().getKeyPrefix() + '0'.repeat(12 - result.length()) + result;
   }
